Changed responsiveness of graph. Pre-declared color for graph as constants. Replaced for-loops in the validation function of new-inventory. Doc blocks are added for new-inventory. Corrected the alignment of login error message.

--- a/dashboard/css/dashboard.css
+++ b/dashboard/css/dashboard.css
@@ -1,12 +1,11 @@
-.heading {
-    display: flex;
-    justify-content: center;
-}
-
 .chart-container {
     opacity: 1;
     display: flex;
-    justify-content: center;
+    margin: auto;
+    width:60%;
+    min-width: 300px;
+    height: 40%;
+    min-height: 200px;
 }
 
 canvas {
