--- a/login/css/login.css
+++ b/login/css/login.css
@@ -1,5 +1,6 @@
 .login {
     width: 310px;
+    height:400px;
     position: relative;
     margin: auto;
     background: rgb(169, 169, 169, 0.5);
@@ -11,7 +12,6 @@
 }
 
 .login input {
-    margin-bottom: 20px;
     height: 30px;
     width: 240px;
     border-radius: 5px;
@@ -19,7 +19,10 @@
 }
 
 .login button {
-    margin-left: 30%;
+    display: flex;
+    margin: auto;
+    margin-top:30px;
+
 }
 
 .login h3 {
