--- a/shared/css/shared.css
+++ b/shared/css/shared.css
@@ -71,15 +71,6 @@ input::placeholder {
     display: flex;
 }
 
-/* #side-nav-div {
-    margin-top: 3%;
-    width: 15%;
-    min-width: 100px;
-    position: relative;
-    padding: 0;
-    height: 75%;
-} */
-
 #side-nav {
     width: 15%;
     min-width: 100px;
@@ -125,15 +116,7 @@ input::placeholder {
     width: 84%;
     position: relative;
     float: right;
-    /* display: inline-block; */
 }
-
-/* #content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-} */
 
 .container {
     background-color: rgba(146, 146, 146, 0.8);
@@ -144,7 +127,7 @@ input::placeholder {
     align-items: center;
     height: 99%;
     width: 100%;
-    min-width: 605px;
+    min-width: 400px;
     overflow: auto;
 }
 
